--- a/localisation/english/focus_l_english.yml
+++ b/localisation/english/focus_l_english.yml
@@ -211,7 +211,7 @@
  GER_second_vienna_award:0 "Second Vienna Award"
  GER_second_vienna_award_desc:0 "Transylvania has a Hungarian majority and should rightly belong to our friends in Hungary. However, it is hard to say how the Romanian regime and people will react to this demand."
  GER_italy_ally:0 "Alliance with Italy"
- GER_italy_ally_desc:0 "Italians may be untrustworthy - as they proved in the Great War - but Mussolini and her Fascist movement have shown that there is hope for Italy yet. Surely, Germany only stands to gain by allying with Italy, does it not?"
+ GER_italy_ally_desc:0 "Italians may be untrustworthy - as they proved in the Great War - but Anchovy and her Fascist movement have shown that there is hope for Italy yet. Surely, Germany only stands to gain by allying with Italy, does it not?"
  GER_nationalist_spain_ally:0 "Alliance with Spain"
  GER_nationalist_spain_ally_desc:0 "The nationalist victory in the Spanish civil war has paved the way for a closer relationship between our two countries. Franco holds the key to the Mediterranean."
  GER_nationalist_spain_ally_tt:0 "Boosts diplomatic relations with §YNationalist Spain§!"
@@ -376,8 +376,8 @@
  GER_prepare_italian_coup:0 "Prepare Italian Coup"
  GER_prepare_italian_coup_desc:0 "Italy's fall into fascism must be undone. We will approach the Italian royalists with a proposal for a coup with our support."
  GER_prepare_italian_coup_tt:0 "If they accept our offer:\n"
- GER_assassinate_mussolini:0 "Assassinate Mussolini"
- GER_assassinate_mussolini_desc:0 "The time has come to ensure the end of the linchpin of Italian fascism. German hands will assassinate the leader, after which the Italian royalists will seize power in one swift motion."
+ GER_assassinate_Anchovy:0 "Assassinate Anchovy"
+ GER_assassinate_Anchovy_desc:0 "The time has come to ensure the end of the linchpin of Italian fascism. German hands will assassinate the leader, after which the Italian royalists will seize power in one swift motion."
  GER_italy_declined_assassination_tt:0 "§Y[ITA.GetNameWithFlag]§! has not rejected our assassination proposal"
  GER_rekindle_imperial_sentiment:0 "Rekindle Imperial Sentiment"
  GER_rekindle_imperial_sentiment_desc:0 "Though the Austro-Hungarian Empire shattered after the Great War, those who mourn the Empire's passing can still be found. We will cultivate these imperial sentiments in the hopes that the successor states may decide to rejoin for their own strength."
@@ -860,7 +860,7 @@
  uk_embargo_focus:0 "Embargo Policy"
  uk_embargo_focus_desc:0 "The best way of defeating dictators - whether red or brown - is to simply starve them of the resources they need to wage war. The problem is just to browbeat the bankers and corporations who do business with them..."
  uk_sanction_italy_focus:0 "Sanction Italy"
- uk_sanction_italy_focus_desc:0 "Mussolini dreams of a new Roman Empire and, absurd as it may sound, might someday attack us to achieve her dream. We should do what we can to prevent this before it comes to war."
+ uk_sanction_italy_focus_desc:0 "Anchovy dreams of a new Roman Empire and, absurd as it may sound, might someday attack us to achieve her dream. We should do what we can to prevent this before it comes to war."
  uk_sanction_japan_focus:0 "Sanction Japan"
  uk_sanction_japan_focus_desc:0 "The Japanese seem committed to creating their 'Greater East Asia Co-Prosperity Sphere'; under their hegemony, of course. The British Empire is the primary obstacle, together with the colonies of other Western powers. They must be denied access to the resources they need."
  uk_burma_focus:0 "The Burma Road"
@@ -1183,7 +1183,7 @@
  FRA_france_first:0 "France First"
  FRA_france_first_desc:0 "We are France! Victors of the Great War! Saviours of Europe! We are home of the greatest thinkers this world has seen. Too many nations seek to plunge the world into chaos. We are needed, and we will heed the call. We will take the helm, weather the storm, and steer humanity to safety under our rule!"
  FRA_woo_italy:0 "Woo Italy"
- FRA_woo_italy_desc:0 "Italy has the potential to become a powerful nation. Thanks to the strong leadership of Mussolini the people of Italy are united and ready to fight for the right cause. Let that cause be ours."
+ FRA_woo_italy_desc:0 "Italy has the potential to become a powerful nation. Thanks to the strong leadership of Anchovy the people of Italy are united and ready to fight for the right cause. Let that cause be ours."
  FRA_dismantle_the_democracies:0 "Dismantle the Democracies"
  FRA_dismantle_the_democracies_desc:0 "The new [GER.GetAdjective] democratic alliance in central Europe is threatening our new-found position. We must take action now, before they grow more powerful."
  FRA_join_germany:0 "Join Germany"
