--- a/localisation/english/gup_general_l_english.yml
+++ b/localisation/english/gup_general_l_english.yml
@@ -1923,6 +1923,8 @@ KMM_anti_fascism:0 "Anti Nishizumist Propaganda"
  ##ELECTIONS
  jak_elections:0 "Elections"
  JAK_mika_win:0 "Mika has Won"
+ FIN_remove_soviet_claims_in_other_states_tt: "Renounce to all claims in [FIN.GetFlag]§Y[FIN.GetAdjective]§! core states."
+ FIN_agree_peace:0 "Jakosota agrees to Pravdan demands and cedes §YKarjala, Salla and Petsamo§!."
 
  ##DECISIONS:
  GuP_decision:0 "Military Academy"
@@ -2598,12 +2600,12 @@ KMM_anti_fascism:0 "Anti Nishizumist Propaganda"
  SOV_defend_poland:1 "Defend Poland"
  SOV_defend_poland_desc:1 "Our strategy worked against the Germans in Czechoslovakia, and now we are prepared to do the same in Poland."
  had_yalta_conference:1 "The Yalta Conference has happened"
- SOV_klara_coup:1 "Klara's Coup"
- SOV_klara_coup_desc:1 "Katyusha has gone mad with power and must be stopped. Klara and other sympathetic officers are planning a coup to put an end to this deranged tyrant's reign."
- SOV_neutrality_party_klara:1 "Workers' and Peasants' Red Army"
+ SOV_alina_coup:1 "Alina's Coup"
+ SOV_alina_coup_desc:1 "Katyusha has gone mad with power and must be stopped. Alina and other sympathetic officers are planning a coup to put an end to this deranged tyrant's reign."
+ SOV_neutrality_party_alina:1 "Workers' and Peasants' Red Army"
  SOV_neutrality_party_anarchism_long:1 "Revolutionary Insurrectionary Army"
  SOV_neutrality_party_anarchism:1 "The Black Army"
- SOV_communist_party_klara:1 "Workers' and Peasants' Red Army"
+ SOV_communist_party_alina:1 "Workers' and Peasants' Red Army"
  SOV_new_government:1 "A New Government"
  SOV_new_government_desc:1 "After Katyusha and her henchmen have been defeated, it is time to put an end to the military government and draft a new constitution."
  SOV_the_red_army:1 "The Red Army"
@@ -2611,7 +2613,7 @@ KMM_anti_fascism:0 "Anti Nishizumist Propaganda"
  SOV_empower_the_military:1 "Empower the Military"
  SOV_empower_the_military_desc:1 "The military is what protects the motherland from harm. Katyusha's purges have done great harm to it, and it must rapidly be rebuilt."
  SOV_Nonna_cadre_revolt:1 "Nonna's Revolt"
- SOV_Nonna_cadre_revolt_desc:1 "A dedicated group of Nonna's officers in the military has put together plans for a coup d'etat against Klara's shaky leadership. All we need is Nonna's go-ahead."
+ SOV_Nonna_cadre_revolt_desc:1 "A dedicated group of Nonna's officers in the military has put together plans for a coup d'etat against Alina's shaky leadership. All we need is Nonna's go-ahead."
  SOV_invite_exiled_communists:1 "Invite Nonna's Exiles"
  SOV_invite_exiled_communists_desc:1 "Many communists and opposition figures fled the USSR when Katyusha began showing her true colours. We should invite them back, so that we can benefit from their ideas."
  SOV_military_state:1 "A Military with a State"
@@ -2649,8 +2651,8 @@ KMM_anti_fascism:0 "Anti Nishizumist Propaganda"
  SOV_anarchism_neutrality_DEF:1 "The Free Territory" 
  SOV_international_anarchism_desc:1 "Our comrades in Spain and elsewhere need our help, and we are in a great position to aid them."
  SOV_the_seeds_of_revolution:1 "The Seeds of Revolution"
- SOV_the_black_army:1 "Mother Anarchy Loves Her Sons"
- SOV_the_black_army_desc:1 "The Anarchist army marches forward, spreading freedom from the barrel of a gun. The soldiers of the Revolution are the Sons and Daughters of Anarchy. From the Taiga to the British Seas, the Black Army is the Strongest!"
+ SOV_the_black_army:1 "Mother Anarchy Loves Her Daughters"
+ SOV_the_black_army_desc:1 "The Anarchist army marches forward, spreading freedom from the barrel of a gun. The soldiers of the Revolution are the Daughters of Anarchy. From the Taiga to the British Seas, the Black Army is the Strongest!"
  SOV_democratic_government:1 "Restore the Russian Republic"
  SOV_democratic_government_desc:1 "Our government lacks legitimacy and the support of the people. Maybe we should give them a greater say, perhaps by restoring the constitutent assembly that was undemocratically dissolved by Katyusha."
  SOV_end_the_purges:1 "End the Purges"
@@ -2823,7 +2825,7 @@ KMM_anti_fascism:0 "Anti Nishizumist Propaganda"
  GER_free_strasserist_prisoners:1 "Free Yuzuomoto's Prisoners"
  GER_free_strasserist_prisoners_desc:1 "The National Socialist party purged its own Left-wing due to fears of Soviet influence. We should undo this course of action."
  GER_communist_revolution:1 "Socialist Republic of Kuromorimine"
- GER_communist_revolution_desc:1 "In the midst of the Military Uprising, the Communists launched a coup d'etat against Hitler, with support of Strasserist elements of the Nazi Party. Now, they seek to estabish a Free Socialist Republic of Germany."
+ GER_communist_revolution_desc:1 "In the midst of the Military Uprising, the Communists launched a coup d'etat against Maho, with support of Strasserist elements of the Nazi Party. Now, they seek to estabish a Free Socialist Republic of Germany."
  GER_german_workers_party:1 "Kuromorimine Workers' Party"
  GER_german_workers_party_desc:1 "We must honor the German Worker and establish a Germanic form of Socialism. Everything for the Volk! Of course, the Communists will demand there to be elections, but we can work with that."
  GER_strasserism_communism:1 "German Workers' Republic"
@@ -2839,7 +2841,6 @@ KMM_anti_fascism:0 "Anti Nishizumist Propaganda"
  GER_german_socialism_desc:1 "German Socialism must meet the unique conditions of the country. Should we exalt the German nation, or instead honour the ideals of Marxist internationalism?"
  GER_legacy_of_marx:1 "Legacy of Marx"
  RULE_COMMUNIST_GER_AI_DESC:1 "Germany will reconcile with the Soviet Union and communists will stage a coup."
- pvd.106.d:1 "Communists in Germany, empowered by the recent loosening of restrictions on their organising as part of a treaty with the Soviet Union, have seized control of key positions in Berlin and killed Hitler. \n\n Himmler has taken charge of the Nazi Party and secured most of the country, promising to bring ruin to all 'Traitorious Judeo-Bolsheviks who murdered the Great Fuhrer'."
 
   ## SCHHIZO ##
   
