--- a/localisation/english/nsb_characters_l_english.yml
+++ b/localisation/english/nsb_characters_l_english.yml
@@ -83,7 +83,7 @@
  SOV_karl_radek:0 "Karl Radek"
  SOV_yevgeny_preobrazhensky:0 "Yevgeni Preobrazhensky"
  SOV_aleksandr_shlyapnikov:0 "Aleksandr Shlyapnikov"
- SOV_lev_trotsky:0 "Lev Trotsky"
+ SOV_lev_trotsky:0 "Nonna"
  SOV_nikolay_bukharin:0 "Nikolay Bukharin"
  SOV_aleksey_rykov:0 "Aleksey Rykov"
  SOV_mikhail_tomsky:0 "Mikhail Tomsky"
