--- a/localisation/english/parties_l_english.yml
+++ b/localisation/english/parties_l_english.yml
@@ -87,8 +87,8 @@
  JAP_neutrality_party_new: "Nishi-Tamada-ha"
  JAP_neutrality_party_tatanashi: "Tsuruki-Tamada-ha"
  SOV_communism_party:0 "Partiya Pravda"
- SOV_democratic_party:0 "Klarskaya Demokraticheskaya Konstitutsionnaya Partiya"
- SOV_fascism_party:0 "Fashistskaya Narodnaya Partiya Nonny"
+ SOV_democratic_party:0 "Demokraticheskaya Konstitutsionnaya Partiya"
+ SOV_fascism_party:0 "Fashistskaya Narodnaya Partiya"
  soviet_idealism:0 "Pravda Idealism"
  soviet_idealism_desc:0 "Pravda High is located in the cold prefecture of Aomori, the school is reminiscent of the Soviet Union. With their main force largely constituted of T34s with IS-2s and KV-2s as support, Pravda's tactics of feint retreat and rapid encirclement is their infamy. A true Sensha-Do powerhouse, second only to Kuromorimine, Pravda is a force to be reckon with to any opposition."
  soviet_idealism2:0 "Pravda Idealism"
