--- a/localisation/english/gup_events_decisions_l_english.yml
+++ b/localisation/english/gup_events_decisions_l_english.yml
@@ -290,32 +290,32 @@
  
  ##DEMAND/BUY DANZIG
  
- kmm.51.t:0 "Kuromorimine Demands Danzig"
- kmm.51.d:0 "Kuromorimine has sent many envoys and diplomats for years trying to get the province back after the treaties in 1920. The hate for the 'Polish Corridor' has plauged our relations for years with Kuromorimine. Shall we resist or shall we mend these relations and finally give back the province?"
- kmm.51.a:0 "We shall surrender it"
- kmm.51.b:0 "Never Surrender!"
- kmm.53.t:0 "Bonple Stands Defient"
- kmm.53.d:0 "Bonple has refused our ultimatum. They have paid the ultimate price. We shall crush their weak nation in weeks. But St. Gloriana stands with Bonple, what fools!"
- kmm.53.a:0 "Panzer Vor!"
- kmm.57.t:0 "Bonple Threatened by Kuromorimine"
- kmm.57.d:0 "We have been informed by the Ponple central government that Kuromorimine has sent an ulimatium to Bonple for Danzig. This is against the versailles treaty! We cannot allow this! But however we are not ready for a war, what shall we do about this?"
- kmm.57.a:0 "Defend Bonple at all costs!"
- kmm.57.b:0 "Rip Bonple"
- kmm.58.t:0 "St. Gloriana Guarentees Us!"
- kmm.58.d:0 "St. Gloriana ratifies the Versailles Treaty and is coming to our aid to defend us against the war mongering Kuromorimine Empire!"
- kmm.58.a:0 "God is with Bonple!"
- kmm.59.t:0 "St. Gloriana Deserts Us!"
- kmm.59.d:0 "St. Gloriana has deserted us in the wake of the Kuromorimine threat. We will never forget the backstabbing."
- kmm.59.a:0 "God has abandoned Us"
- kmm.61.t:0 "Bonple Stands Defient"
- kmm.61.d:0 "Even after trying to secure an guarantee from St. Gloriana Bonple stands alone. Their failure of a state is nothing compaired to our army. Time to reclaim our rightful land!"
- kmm.61.a:0 "Panzer Vor!"
- kmm.54.t:0 "Kuromorimine Offers to Buy Danzig"
- kmm.54.d:0 "The controversial province of Danzig has been a hot topic for years in our international affairs. Since Kuromorimine is offering to buy it we can profit of this and end our hostilites between our countries."
- kmm.54.a:0 "Sell it off!"
- kmm.55.t:0 "Bonple Accepts"
- kmm.55.d:0 "After much negotiation the Bonple government has accepted a proposal. It was a hefty price but we finally got rid of the hated Polish Corridor. We must move quickly to unite the rest of the German speaking population in Europe."
- kmm.55.a:0 "Excellent"
+ #kmm.51.t:0 "Kuromorimine Demands Danzig"
+ #kmm.51.d:0 "Kuromorimine has sent many envoys and diplomats for years trying to get the province back after the treaties in 1920. The hate for the 'Polish Corridor' has plauged our relations for years with Kuromorimine. Shall we resist or shall we mend these relations and finally give back the province?"
+ #kmm.51.a:0 "We shall surrender it"
+ #kmm.51.b:0 "Never Surrender!"
+ #kmm.53.t:0 "Bonple Stands Defient"
+ #kmm.53.d:0 "Bonple has refused our ultimatum. They have paid the ultimate price. We shall crush their weak nation in weeks. But St. Gloriana stands with Bonple, what fools!"
+ #kmm.53.a:0 "Panzer Vor!"
+ #kmm.57.t:0 "Bonple Threatened by Kuromorimine"
+ #kmm.57.d:0 "We have been informed by the Ponple central government that Kuromorimine has sent an ulimatium to Bonple for Danzig. This is against the versailles treaty! We cannot allow this! But however we are not ready for a war, what shall we do about this?"
+ #kmm.57.a:0 "Defend Bonple at all costs!"
+ #kmm.57.b:0 "Rip Bonple"
+ #kmm.58.t:0 "St. Gloriana Guarentees Us!"
+ #kmm.58.d:0 "St. Gloriana ratifies the Versailles Treaty and is coming to our aid to defend us against the war mongering Kuromorimine Empire!"
+ #kmm.58.a:0 "God is with Bonple!"
+ #kmm.59.t:0 "St. Gloriana Deserts Us!"
+ #kmm.59.d:0 "St. Gloriana has deserted us in the wake of the Kuromorimine threat. We will never forget the backstabbing."
+ #kmm.59.a:0 "God has abandoned Us"
+ #kmm.61.t:0 "Bonple Stands Defient"
+ #kmm.61.d:0 "Even after trying to secure an guarantee from St. Gloriana Bonple stands alone. Their failure of a state is nothing compaired to our army. Time to reclaim our rightful land!"
+ #kmm.61.a:0 "Panzer Vor!"
+ #kmm.54.t:0 "Kuromorimine Offers to Buy Danzig"
+ #kmm.54.d:0 "The controversial province of Danzig has been a hot topic for years in our international affairs. Since Kuromorimine is offering to buy it we can profit of this and end our hostilites between our countries."
+ #kmm.54.a:0 "Sell it off!"
+ #kmm.55.t:0 "Bonple Accepts"
+ #kmm.55.d:0 "After much negotiation the Bonple government has accepted a proposal. It was a hefty price but we finally got rid of the hated Polish Corridor. We must move quickly to unite the rest of the German speaking population in Europe."
+ #kmm.55.a:0 "Excellent"
  
  ##OOARAI PUPPET
  
@@ -328,8 +328,8 @@
  kmm.63.a:0 "3 Hurrahs for Kuromorimine"
  
  kmm.65.t:0 "Miho Refuses"
- kmm.63.d:0 "Even with our recent militarization of the border it was not enough to scare Miho into surrendering. Some reports say Koume is 'fuhrerous'. Our army will not hold back now!"
- kmm.63.a:0 "Bastards!"
+ kmm.65.d:0 "Even with our recent militarization of the border it was not enough to scare Miho into surrendering. Some reports say Koume is 'fuhrerous'. Our army will not hold back now!"
+ kmm.65.a:0 "Bastards!"
  kmm.66.t:0 "Ooarai Requests Help"
  kmm.66.d:0 "The evil Kuromorimine Empire first removed a friend of Anchovey from power, and now they are threatening the Treaty of Versailles and Ooarai's soverignty. Under the Rome protocalls we have to come to their aids if they are attacked. Do we want to honour the pact?"
  kmm.66.a:0 "Honour the Pact"
@@ -445,9 +445,9 @@
  kmm.98.a:0 "A new Era has dawned"
  
  ##THE UNION
- kmm.50.t:0 "Ooarai-Kuro Union!"
- kmm.50.d:0 "After Koume stepped down from power many students were suggestion a union between the two countries. After weeks of negotiations the two parties have agreed on a union of the two parties."
- kmm.50.a:0  "Excellent"
+ #kmm.50.t:0 "Ooarai-Kuro Union!"
+ #kmm.50.d:0 "After Koume stepped down from power many students were suggestion a union between the two countries. After weeks of negotiations the two parties have agreed on a union of the two parties."
+ #kmm.50.a:0  "Excellent"
  kmm_news.5.t:0 "Koume inaugurates Kurorepublik"
  kmm_news.5.d:0 "With movements on democratization of the academy, it has finally come into fruition as Kuromorimine inaugurates anew a republic seen never before with an appointed president and elected chancellor. \n\nParades all around the academty rejoice in a new founded hope for academic reform and change. The shackles of autocracy have now been destroyed and Kuromorimine is rising from the ashes. \n\nOther academies only hope in accomodation of this new regime. The brewing storm simmers for now.."
  kmm_news.5.a:0 "To a Brighter Future!"
