--- a/localisation/english/gup_general_l_english.yml
+++ b/localisation/english/gup_general_l_english.yml
@@ -952,6 +952,8 @@ KMM_anti_fascism:0 "Anti Nishizumist Propaganda"
  ### CHIHATAN PACK ###
 
  ##JAPANESE, MENGKUKUO, MANCHURIAN FOCUSES
+ JAP_nationalize_the_zaibatsus_bruh:0 "Zaibatsus Nationalization"
+ JAP_nationalize_the_zaibatsus_bruh_desc:0 "The nation's biggest corporations have wielded unprecedented political and economic power for a long time. But now, the state's authority will go unchallenged."
  JAP_alliance_expansion_plan:0 "Alliance Expansion Plan"
  JAP_trans_pacific_faction:0 "Trans-Pacific Treaty"
  JAP_preemptive_strike_soviet:0 "Pre-emptive Strike"
@@ -1507,8 +1509,8 @@ KMM_anti_fascism:0 "Anti Nishizumist Propaganda"
  FIN_learn_soviet_strategy:0 "Studying Pravda Strategy"
  FIN_learn_soviet_strategy_desc:0 "We may not have the numbers of pravda but, but we can still study their doctrine and take what would work for us and implement it"
  
- FIN_finnish_neutrality:0 "Jatkosota Neutrality"
- FIN_finnish_neutrality_desc:0 "We have to accept the reality: there is no way we can defeat Pravda in a war. Therefore, let's start to establish our neutrality so we don't enter into any conflict with them. This is probably for the best."
+ FIN_finnish_neutrality_bruh:0 "Jatkosota Neutrality"
+ FIN_finnish_neutrality_bruh_desc:0 "We have to accept the reality, there is no way we can defeat Pravda in a war. Therefore, let's start to establish our neutrality so we don't enter into any conflict with them. This is probably for the best."
  FIN_estonia_coop:0 "Deepen Cooperation with Estonia"
  FIN_estonia_coop_desc:0 "If we are to win in this struggle against Pravda, we need to find allies. So let's start right away by asking for an alliance with our Estonian brothers."
  FIN_latvia_pact:0 "Treaty with Livland"
@@ -1955,8 +1957,16 @@ KMM_anti_fascism:0 "Anti Nishizumist Propaganda"
   ITA_expand_africa_desc:0 "The richness of our african territories has to be put to good use. We shall begin exploiting those resources."
   ITA_focus_for_oil:0 "Focus On Oil"
   ITA_focus_for_oil_desc:0 "Oil is a most precious resource and the exploitation of it in the Tripoli region will greatly improve our reserves."
-  ITA_libyan_refineries:0 "Libyan Refineries"
-  ITA_libyan_refineries_desc:0 "Benhasi is a perfect place for constructing refineries. Close to oil sources and close to production in the homeland."
+  ITA_libyan_refineries_bruh:0 "Libyan Refineries"
+  ITA_libyan_refineries_bruh_desc:0 "Benhasi is a perfect place for constructing refineries. Close to oil sources and close to production in the homeland."
+  ITA_pact_of_steel_bruh:0 "Pact of Steel"
+  ITA_pact_of_steel_bruh_desc:0 "Our relationship with Nazi Germany is troubled by ideological differences and conflicting aims; Il Duce is extremely wary of German ambitions in Austria and the Balkans. However, realities do change..." 
+  ITA_secret_weapons_bruh:0 "$secret_weapons$"
+  ITA_secret_weapons_bruh_desc:0 "$secret_weapons_desc$"
+  ITA_italy_first_bruh:0 "Italy First"
+  ITA_italy_first_bruh_desc:1 "Our glorious Duce will never play second fiddle to Hitler! We must heed the lessons of the Roman Empire; Teutonic interference in Italian affairs never ends well..."
+  ITA_befriend_greece_bruh:0 "Befriend Greece"
+  ITA_befriend_greece_bruh_desc:1 "$ITA_greece_friend_desc$"
   ITA_invest_in_ethiopia:0 "Invest In Ethiopia"
   ITA_invest_in_ethiopia_desc:0 "Ethiopia has been part of our successful conquer and after a long fight, expeditioners have found that the land is prone to have a lot of rubber.\n\nUsing the finest italian technology we shall see to maximize the use of this resource."
   ITA_invest_in_tripoli:0 "Invest In Tripoli"
@@ -2463,8 +2473,12 @@ KMM_anti_fascism:0 "Anti Nishizumist Propaganda"
  SOV_consumer_cooperatives_desc:1 "The Consumer Cooperative movement in Russia started in 1831, and it has only grown more and more popular. The [Root.GetAdjective] State could do well with further integrating the consumer cooperatives into a central state apparatus known as Centrosoyuz."
  SOV_partisan_collectives:1 "Partisan Collectives"
  SOV_partisan_collectives_desc:1 "The enemy has their boot to the throat of the [Root.GetAdjective] farmer. The [Root.GetAdjective] farmer will rise up and push them out of our occupied territories, forming collectives under the direct command of the STAVKA to wage a dirty partisan war."
- SOV_third_five_year_plan:1 "Third Five Year Plan"
- SOV_third_five_year_plan_desc:1 "Unlike the second Five Year Plan, the third Five Year Plan focused primarily on increasing consumer goods production, although the threat of war still loomed on the horizon."
+ SOV_third_five_year_plan_bruh:1 "Third Five Year Plan"
+ SOV_third_five_year_plan_bruh_desc:1 "Unlike the second Five Year Plan, the third Five Year Plan focused primarily on increasing consumer goods production, although the threat of war still loomed on the horizon."
+ SOV_transpolar_flights_bruh:0 "Transpolar Flights"
+ SOV_transpolar_flights_bruh_desc:0 "Our bravest pilots are just beginning to prove that daring routes across the arctic are possible. By using unexpected shortcuts like these in our planning of aerial warfare, we will be able to surprise the enemy."
+ SOV_annex_tannu_tuva_bruh:0 "Annex Tannu Tuva"
+ SOV_annex_tannu_tuva_bruh_desc:0 "While it hardly matters economically, for political reasons we should formally annex the People's Republic of Tannu Tuva as an autonomous oblast within the Soviet Union."
  SOV_five_year_plan_decision:1 "Five Year Plan"
  SOV_virgin_lands:1 "Virgin Lands"
  SOV_virgin_lands_desc:1 "Vast tracts of land in [Root.GetNameDef], particularly in Kazakhstan and Siberia, remain uncultivated. We should put resources into a massive campaign for §Gincrease§!d grain production in those regions."
@@ -2705,7 +2719,7 @@ KMM_anti_fascism:0 "Anti Nishizumist Propaganda"
  SOV_russian_nation_desc:1 "The Fascist party has been agitating for a Russian Nationalist constitution based on the principles of the Black Hundreds of the Tsarist era. Their movement has been gaining in popularity since the end of the Second Russian Civil War."
  SOV_russian_nation_idea:1 "Russian Ultranationalism"
  SOV_republic_black_hundreds:1 "Union of Mladorossi"
- SOV_tsar_vladimir:1 "Vladimir Romanov III"
+ SOV_tsar_vladimir:1 "Tsar Restorer"
  tsar_restorer:1 "Tsar Restorer"
  SOV_fascist_coup:1 "Reactionary Coup"
  SOV_fascist_coup_desc:1 "After the chaos of the civil war, the people are seeking a strong leadership and a strong nation. We have enough popular support to seize control of the constituent assembly and engineer a coup."
@@ -2818,11 +2832,11 @@ KMM_anti_fascism:0 "Anti Nishizumist Propaganda"
  GER_DAP:1 "DAP"
  GER_socialist_exile_exchange:1 "Socialist Exile Exchange"
  GER_socialist_exile_exchange_desc:1 "As part of the terms for the Molotov Ribbentrop pact, we could agree to exchange German and Soviet exiles with the Soviet Union."
- GER_free_communist_prisoners:1 "Free Nakasuga's Prisoners"
+ GER_free_communist_prisoners:1 "Free Kita's Prisoners"
  GER_free_communist_prisoners_desc:1 "Maho has imprisoned thousands of Socialist politicians in concentration camps. This was a mistake."
  GER_socialist_intellectual_repatriation:1 "Socialist Intellectual Repatriation"
  GER_socialist_intellectual_repatriation_desc:1 "We can invite exiled Socialists back to our nation so that they can work for the good of the Reich."
- GER_free_strasserist_prisoners:1 "Free Yuzuomoto's Prisoners"
+ GER_free_strasserist_prisoners:1 "Free Hitomi's Prisoners"
  GER_free_strasserist_prisoners_desc:1 "The National Socialist party purged its own Left-wing due to fears of Soviet influence. We should undo this course of action."
  GER_communist_revolution:1 "Socialist Republic of Kuromorimine"
  GER_communist_revolution_desc:1 "In the midst of the Military Uprising, the Communists launched a coup d'etat against Maho, with support of Strasserist elements of the Nazi Party. Now, they seek to estabish a Free Socialist Republic of Germany."
