--- a/localisation/english/focus_l_english.yml
+++ b/localisation/english/focus_l_english.yml
@@ -578,16 +578,16 @@
  SOV_tranformation_of_nature_desc:0 "Katyusha's Great Plan for the Transformation of Nature must be put into action. The environment must be shaped and molded on a massive scale to work in the People's favor."
  SOV_stalin_constitution:0 "Katyusha Constitution"
  SOV_stalin_constitution_desc:0 "It is time to update our old constitution and impress the world with the rights enjoyed by the workers and peasants of the Soviet Union!"
- #SOV_collectivist_propaganda:0 "Collectivist Propaganda"
- #SOV_collectivist_propaganda_desc:0 "In the Soviet Union, there is no room for individual glory. Our propaganda should strongly emphasize collective efforts; surpassed production goals, successful expeditions and massive construction projects."
+ SOV_collectivist_propaganda_bruh:0 "Collectivist Propaganda"
+ SOV_collectivist_propaganda_bruh_desc:0 "In the Soviet Union, there is no room for individual glory. Our propaganda should strongly emphasize collective efforts; surpassed production goals, successful expeditions and massive construction projects."
  SOV_militarized_schools:0 "Militarized Schools"
  SOV_militarized_schools_desc:0 "Soviet children should be inculcated in military discipline and Socialist virtues like self-sacrifice and solidarity. Young minds are more easily molded."
  SOV_workers_culture:0 "Workers' Culture"
  SOV_workers_culture_desc:0 "Socialism is not just an economic system and Marxism is not just a science; we must transform the very fabric of Soviet society to extirpate all remnants of bourgeois mores and traditions."
  SOV_new_soviet_man:0 "New Soviet woman"
  SOV_new_soviet_man_desc:0 "The New Soviet woman is selfless, learned, disciplined and healthy; a living triumph over base instincts and false consciousness. women will gladly lay down their lives for the good of all, and women will bear many children for the future of Soviet society."
- #SOV_positive_heroism:0 "Positive Heroism"
- #SOV_positive_heroism_desc:0 "It is time to move on from the old Leninist collectivist propaganda and transform various exceptional individuals into larger-than-life Heroes of Socialism!"
+ SOV_positive_heroism_bruh:0 "Positive Heroism"
+ SOV_positive_heroism_bruh_desc:0 "It is time to move on from the old Leninist collectivist propaganda and transform various exceptional individuals into larger-than-life Heroes of Socialism!"
  SOV_progress_cult:0 "Progress Cult"
  SOV_progress_cult_desc:0 "We should celebrate the innovations of outstanding Soviet scientists and encourage the correct kind of free thinking. The USSR will always be ahead of the decadent West when it comes to daring new fields of science; just look at the brilliant work of comrade Lysenko!"
  SOV_socialist_science:0 "Socialist Science"
@@ -597,8 +597,8 @@
  SOV_women_pilots:0 "Women in Aviation"
  SOV_women_pilots_desc:0 "Comrade Raskova, our heroic long distance aviator, should be allowed to form some all-female air regiments through her Aviation Group 122 program."
  SOV_night_witches_tt:0 "The 588. Night Bomber Regiment becomes active in Moscow."
- #SOV_socialist_realism:0 "Socialist Realism"
- #SOV_socialist_realism_desc:0 "All works of art in the Soviet Union must strive to educate the people in the goals and meaning of Communism, depicting the proletariat in realistic and typical scenes of everyday life. Soviet artists are the engineers of souls!"
+ SOV_socialist_realism_bruh:0 "Socialist Realism"
+ SOV_socialist_realism_bruh_desc:0 "All works of art in the Soviet Union must strive to educate the people in the goals and meaning of Communism, depicting the proletariat in realistic and typical scenes of everyday life. Soviet artists are the engineers of souls!"
  SOV_improve_railway_network:0 "Improve Railway Network"
  SOV_improve_railway_network_desc:0 "Our First Five year plan proved to be too successful. The massive expansion in heavy industry has left the Soviet Union in a much stronger position to defend herself but the soviet railway network has hit some critical bottlenecks. The People's Commissariat of Railways (NKPS) has an ambitious plan to close these bottlenecks and ensure that we can defend the motherland."
  SOV_improve_railway:2 "Improve Railway Network"
@@ -617,8 +617,8 @@
  SOV_annex_tannu_tuva_desc:0 "While it hardly matters economically, for political reasons we should formally annex the People's Republic of Tannu Tuva as an autonomous oblast within the Soviet Union."
  SOV_improve_stalin_line:0 "Improve the Katyusha Line"
  SOV_improve_stalin_line_desc:0 "Our western border must be better protected from fascist aggression. The Katyusha Line should be extended and modernized."
- #SOV_far_east_fortification:0 "Far East Fortification"
- #SOV_far_east_fortification_desc:0 "The Japanese are constantly making incursions across the border with Manchuria. We must improve our defenses along that frontier in order to deter them permanently."
+ SOV_far_east_fortification_bruh:0 "Far East Fortification"
+ SOV_far_east_fortification_bruh_desc:0 "The Japanese are constantly making incursions across the border with Manchuria. We must improve our defenses along that frontier in order to deter them permanently."
  SOV_far_east_fortification_forts_1:0 "Add §Y6 Land Forts§! on the Japanese border.\n"
  SOV_far_east_fortification_forts_2:0 "Add §Y8 Land Forts§! on the Japanese border.\n"
  SOV_far_east_fortification_forts_3:0 "Add §Y4 Land Forts§! on the Japanese border.\n"
@@ -633,8 +633,8 @@
  SOV_anti_colonialist_rebels_desc:0 "With the capitalist system entering its period of final collapse, the correct stance for all Communist parties must be a highly aggressive, militant, ultra-left line. In particular, we urge the Communist parties of the world to devote their energies to the destruction of the moderate left."
  SOV_southern_thrust:0 "Southern Thrust"
  SOV_southern_thrust_desc:0 "Annexing Iran and Iraq would both secure their vast oil reserves for the Revolution and put direct pressure on the British imperialists in Egypt and India."
- #SOV_reconcile_japan:0 "Reconcile Japan"
- #SOV_reconcile_japan_desc:0 "Our relations with Japan have always been troubled, but there are bigger fish to fry. By exploiting their desperate lack of natural resources, the Japanese could be led by the nose... Their anachronistic feudal regime is bound to fall soon anyway."
+ SOV_reconcile_japan_bruh:0 "Reconcile Japan"
+ SOV_reconcile_japan_bruh_desc:0 "Our relations with Japan have always been troubled, but there are bigger fish to fry. By exploiting their desperate lack of natural resources, the Japanese could be led by the nose... Their anachronistic feudal regime is bound to fall soon anyway."
  SOV_claim_on_sinkiang:0 "Claim Sinkiang"
  SOV_claim_on_sinkiang_desc:0 "Under Comrade Sheng Shicai's rule, Sinkiang is already a virtual Soviet puppet state. We should make it official..."
  SOV_claim_on_sinkiang_threat:0 "Soviet Claimed Sinkiang"
@@ -646,14 +646,14 @@
  SOV_claim_bessarabia_desc:0 "The Black Sea is even more important to our economy than the Baltic. We must do everything we can to secure control of the Bosphorus and the Dardanelles."
  SOV_claims_on_turkey:0 "Claims on Turkey"
  SOV_claims_on_turkey_desc:0 "The Turks have not just consistently refused our demands for mutual control of the Bosphorus straits, they also refuse to discuss any border adjustments in the east. Perhaps it is time to teach them a lesson!"
- #SOV_baltic_security:0 "Baltic Security"
- #SOV_baltic_security_desc:0 "The Baltic is our front yard and must be protected at all costs. Karelia must be seized to give Leningrad a secure buffer zone, and the self-rule of Estonia is just ridiculous!"
- #SOV_claims_on_poland:0 "Claims on Poland"
- #SOV_claims_on_poland_desc:0 "The display of incompetence and embarrassment that was the Soviet-Polish war must be avenged and eastern Poland reintegrated into the USSR!"
- #SOV_demand_eastern_poland:0 "Demand Eastern Poland"
- #SOV_demand_eastern_poland_desc:0 "Having reasserted our right to Poland's eastern territories, we should make clear that they can only save themselves from another partition by handing them over peacefully."
- #SOV_offer_poland_protection:0 "Offer Poland Protection"
- #SOV_offer_poland_protection_desc:0 "Although we could simply seize eastern Poland, it would be much preferable if they joined our Comintern in the process. We would need to offer something in return for our claims, however. If we promise them eastern Germany, they might be interested."
+ SOV_baltic_security_bruh:0 "Baltic Security"
+ SOV_baltic_security_bruh_desc:0 "The Baltic is our front yard and must be protected at all costs. Karelia must be seized to give Leningrad a secure buffer zone, and the self-rule of Estonia is just ridiculous!"
+ SOV_claims_on_poland_bruh:0 "Claims on Poland"
+ SOV_claims_on_poland_bruh_desc:0 "The display of incompetence and embarrassment that was the Soviet-Polish war must be avenged and eastern Poland reintegrated into the USSR!"
+ SOV_demand_eastern_poland_bruh:0 "Demand Eastern Poland"
+ SOV_demand_eastern_poland_bruh_desc:0 "Having reasserted our right to Poland's eastern territories, we should make clear that they can only save themselves from another partition by handing them over peacefully."
+ SOV_offer_poland_protection_bruh:0 "Offer Poland Protection"
+ SOV_offer_poland_protection_bruh_desc:0 "Although we could simply seize eastern Poland, it would be much preferable if they joined our Comintern in the process. We would need to offer something in return for our claims, however. If we promise them eastern Germany, they might be interested."
  SOV_offer_poland_protection_tt:0 "§YPoland will be given states claimed through this agreement in the event of Soviet conquest.§!\n"
  SOV_great_purge:0 "The Great Purge"
  SOV_great_purge_bypass_tt:0 "Nonna becomes the leader of The Soviet Union"
@@ -664,18 +664,18 @@
  SOV_permanent_revolution_tt:0 "Nonna has returned"
  SOV_permanent_revolution_tt2:0 "§YNonna§! gains a better leader trait."
  SOV_permanent_revolution_desc:0 "The oppressive demagogue is gone! True power has been restored to the people of our nation. All are now able to pursue their interests independently and without compromise. We are forever changing. The permanent revolution is a triumphant revolution."
- #SOV_rehabilitated_military:0 "Rehabilitated Military"
- #SOV_rehabilitated_military_desc:0 "With the taint of Nonnaism finally cleansed from the officer corps, it might be possible to allow the military some freedom from political interference again."
- #SOV_military_reorganization:0 "Military Reorganization"
- #SOV_military_reorganization_desc:0 "The Purge has not left the military in a good state. The new leadership is green and ineffective, and no work has been done to develop our doctrines. We must rectify this situation immediately!"
- #SOV_nkvd_primacy:0 "NKVD Primacy"
- #SOV_nkvd_primacy_desc:0 "The military has shown that it can never be trusted. Therefore, the NKVD will need to be expanded and given greater powers, with more political commissars to keep an eye on the officers."
+ SOV_rehabilitated_military_bruh:0 "Rehabilitated Military"
+ SOV_rehabilitated_military_bruh_desc:0 "With the taint of Nonnaism finally cleansed from the officer corps, it might be possible to allow the military some freedom from political interference again."
+ SOV_military_reorganization_bruh:0 "Military Reorganization"
+ SOV_military_reorganization_bruh_desc:0 "The Purge has not left the military in a good state. The new leadership is green and ineffective, and no work has been done to develop our doctrines. We must rectify this situation immediately!"
+ SOV_nkvd_primacy_bruh:0 "NKVD Primacy"
+ SOV_nkvd_primacy_bruh_desc:0 "The military has shown that it can never be trusted. Therefore, the NKVD will need to be expanded and given greater powers, with more political commissars to keep an eye on the officers."
  SOV_nkvd_divisions:0 "NKVD Divisions"
  SOV_nkvd_divisions_desc:0 "The NKVD should be given some divisions of its own to act as Internal Troops, protecting railways and important installations."
- #SOV_lessons_of_war:0 "Lessons Of War"
- #SOV_lessons_of_war_desc:0 "With the experiences gained fighting limited wars, we should be able to make some breakthroughs in armored warfare, and perhaps even finally whip the depleted officer corps into shape!"
- #SOV_smersh:0 "SMERSH"
- #SOV_smersh_desc:0 "SMERSH, or 'Death to Spies', is a proposed counter-intelligence initiative that would serve a dual purpose; rooting out enemy spies and executing deserters and partisans within the ranks of the Red Army."
+ SOV_lessons_of_war_bruh:0 "Lessons Of War"
+ SOV_lessons_of_war_bruh_desc:0 "With the experiences gained fighting limited wars, we should be able to make some breakthroughs in armored warfare, and perhaps even finally whip the depleted officer corps into shape!"
+ SOV_smersh_bruh:0 "SMERSH"
+ SOV_smersh_bruh_desc:0 "SMERSH, or 'Death to Spies', is a proposed counter-intelligence initiative that would serve a dual purpose; rooting out enemy spies and executing deserters and partisans within the ranks of the Red Army."
  SOV_smersh_tt:0 "§YNullifies the risk of a coup.§!\n"
  SOV_partisan_suppression:0 "Partisan Suppression"
  SOV_partisan_suppression_desc:0 "SMERSH should be expanded to better be able to infiltrate and ruthlessly suppress all forms of partisan activity in occupied territory."
